# MovieMind

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/versions/: 75885d6ae26a_criação_das_tabelas_iniciais.py  a8761ca298e6_criação_das_tabelas_iniciais.py
app/: database.py  main.py  models.py  schemas.py
app/api/: movie_controller.py  rating_controller.py  user_controller.py
app/services/: auth_service.py  movie_service.py  rating_service.py  user_service.py
app/tests/: test_movie.py  test_rating.py  test_user.py
